Changed JS and CSS. Stopped overflowing numbers by reducing font size if result displayed is more than 7 numbers. This scales with every additional 7 numbers. Added two functions to change % button font color while it is being used then turned off when not being used.Changed CSS to change background color and font size of button when clicked. Also centered entire calculator on viewport.

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,18 @@
-html, body {
-    height: 100vh;
-}
-
-
 @font-face{
     font-family:'digital-clock-font';
-    src: url('/home/sunnyb30/repos/calculator/digitalfont/digital-7.ttf');
+    src: url('/home/sunnyb30/repos/calculator/digitalfont/alarm clock.ttf');
    }
 
+body {
+    height: 100vh;
+    width: 100vw;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .calculator {
     display: flex; 
@@ -19,20 +24,23 @@ html, body {
     background-color: black;
 }
 
-.display {
-    display: flex; 
-    flex: 0.3;
-    font-family: 'digital-clock-font';
-    margin-top: 10px;
-    width: 430px; 
-    min-height: 100px;
-    border: 2px black solid; 
-    font-size: 100px; 
-    color: white;
-    border: 2px white solid;
+.display-container {
+    display: flex;
     justify-content: end; 
     align-items: center;
-    
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 430px; 
+    height: 100px;
+}
+
+.display {
+    display: flex; 
+    flex-wrap: wrap;
+    font-family: 'digital-clock-font';
+    font-size: 100px; 
+    max-height: 100px;
+    color: white;  
 }
 
 .row {
@@ -63,9 +71,14 @@ html, body {
     border: none; 
 }
 
+.button:active {
+    background-color: #65656c; 
+    font-size: 250%;
+  }
+
 .number, .dot, .changesign {
     color: white;
-    background-color: #29292c ;
+    background-color: #29292c;
     
 }
 
